infra/minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: minio
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
  template:
    metadata:
      namespace: minio
      labels:
        app.kubernetes.io/name: minio
    spec:
      tolerations:
        - key: "location"
          operator: "Equal"
          value: "external"
          effect: "NoSchedule"
      containers:
        - name: minio
          image: bitnami/minio:2025.2.7@sha256:20e4acd1178864dba7d9a1cc3922eecd42f1e8020c5d553eac72a1e758749994
          command:
            - /bin/bash
            - -c
          args:
            - minio server /data --console-address :9001
          volumeMounts:
            - mountPath: /data
              name: data
          ports:
            - containerPort: 9000
              name: web
            - containerPort: 9001
              name: console
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
spec:
  selector:
    app.kubernetes.io/name: minio
  ports:
    - name: console
      port: 9001
      targetPort: 9001
    - name: web
      port: 9000
      targetPort: 9000
