infra/minio/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio
  namespace: minio
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`minio.k.joshuachp.dev`)"
      kind: Rule
      services:
        - name: minio
          port: web
    - match: "Host(`minio-console.k.joshuachp.dev`)"
      kind: Rule
      services:
        - name: minio
          port: console
  tls:
    domains:
      - main: k.joshuachp.dev
        sans:
          - "*.k.joshuachp.dev"
